--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
+    "postinstall": "patch-package",
     "prestart": "node icons-build-type-definitions",
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -32,6 +33,7 @@
     "@fortawesome/fontawesome-pro": "^6.4.0",
     "@icoset/icoset": "^1.0.0",
     "@icoset/icoset-webpack-plugin": "^1.0.0",
+    "@types/picomatch": "^2.3.0",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
@@ -43,8 +45,10 @@
     "kremling-babel-plugin": "^2.0.0",
     "kremling-loader": "^2.1.2",
     "node-loader": "^2.0.0",
+    "patch-package": "^6.5.1",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
@@ -55,11 +59,13 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.22.2",
+    "@floating-ui/react": "^0.19.2",
     "electron-squirrel-startup": "^1.0.0",
+    "flexsearch": "^0.7.31",
     "framer-motion": "^10.10.0",
     "kremling": "^2.1.1",
     "lipid": "^2.0.1",
+    "picomatch": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.0",
