--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.19.2",
     "electron-squirrel-startup": "^1.0.0",
-    "flexsearch": "^0.7.31",
+    "flexsearch": "https://github.com/nextapps-de/flexsearch/tarball/0.7.0",
     "framer-motion": "^10.10.0",
     "kremling": "^2.1.1",
     "lipid": "^2.0.1",
