--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
-    "postinstall": "patch-package",
     "prestart": "node icons-build-type-definitions",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "start": "webpack serve",
+    "build": "rm -rf public && webpack"
   },
   "keywords": [],
   "author": {
@@ -24,47 +20,38 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
-    "@electron-forge/cli": "^6.1.0",
-    "@electron-forge/maker-deb": "^6.1.0",
-    "@electron-forge/maker-rpm": "^6.1.0",
-    "@electron-forge/maker-squirrel": "^6.1.0",
-    "@electron-forge/maker-zip": "^6.1.0",
-    "@electron-forge/plugin-webpack": "^6.1.0",
     "@fortawesome/fontawesome-pro": "^6.4.0",
     "@icoset/icoset": "^1.0.0",
     "@icoset/icoset-webpack-plugin": "^1.0.0",
     "@types/picomatch": "^2.3.0",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "electron": "23.2.1",
-    "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "kremling-babel-plugin": "^2.0.0",
     "kremling-loader": "^2.1.2",
-    "node-loader": "^2.0.0",
-    "patch-package": "^6.5.1",
     "postcss": "^8.4.21",
-    "postcss-loader": "^7.1.0",
-    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
-    "tailwindcss": "^3.3.1",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "webpack": "^5.78.0",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
     "@floating-ui/react": "^0.19.2",
-    "electron-squirrel-startup": "^1.0.0",
+    "axios": "^1.3.5",
     "flexsearch": "https://github.com/nextapps-de/flexsearch/tarball/0.7.0",
     "framer-motion": "^10.10.0",
     "kremling": "^2.1.1",
     "lipid": "^2.0.1",
+    "natural": "^6.2.0",
     "picomatch": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
