--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/fontawesome-pro": "^6.4.0",
     "@icoset/icoset": "^1.0.0",
     "@icoset/icoset-webpack-plugin": "^1.0.0",
+    "@types/highlightjs": "^9.12.2",
+    "@types/lodash": "^4.14.192",
     "@types/picomatch": "^2.3.0",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
@@ -45,12 +47,19 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.5",
     "@floating-ui/react": "^0.19.2",
+    "@openbayes/highlightjs-line-numbers": "^2.8.2",
+    "@uiw/codemirror-theme-github": "^4.19.12",
+    "@uiw/react-codemirror": "^4.19.12",
     "axios": "^1.3.5",
     "flexsearch": "https://github.com/nextapps-de/flexsearch/tarball/0.7.0",
     "framer-motion": "^10.10.0",
+    "highlight.js": "^11.7.0",
+    "highlightjs-line-numbers.js": "^2.8.0",
     "kremling": "^2.1.1",
     "lipid": "^2.0.1",
+    "lodash": "^4.17.21",
     "natural": "^6.2.0",
     "picomatch": "^2.3.1",
     "react": "^18.2.0",
